fixed alignment issues (probably)
was using vw instead of % for a few widths

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ body {
   font-size: 1.2rem;
   background-color: #fffcd6;
   overflow-x: hidden;
+  
 }
 
 .siteWrapper {
@@ -43,6 +44,7 @@ body {
   display: block;
   overflow-anchor: none;
   width: 100%;
+  
 }
 
 a {
@@ -109,7 +111,7 @@ p {
 # Sections
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 30px 0;
   overflow: hidden;
 }
 
@@ -535,7 +537,7 @@ section {
 }
 
 .hero {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 
   background-size: auto;
